fixed spacing on index

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,7 @@ ul {
 p {
   margin-bottom: 0px;
 }
+
+h1 {
+  margin-top: 0px;
+}
